    and a persp3d() method for objects of class "formula"
    have been added.  (A bug in the implementation of
    as.mesh3d.deldir() was found and fixed during the 
    latter addition.)
  - as.mesh3d(), plot3d() and persp3d() methods for "ashape3d"
    objects from the alphashape3d package have been added.
  - The mouse mode (trackball, zoom, etc.) can now be applied
    separately to each individual subscene in a scene.
    (By default the mode is inherited from the root subscene.)
  - Added par3d("userProjection"), to allow the user to supply
    a change to the projection after all other display calculations 
    have been done.
  - Added par3d("activeSubscene"), to allow mouse callback
    functions to determine which subscene was clicked.
  - Selection functions did not work well with subscenes.
  - Deleting an object that has been added as a 3D sprite
    caused rgl to crash.
  - A number of memory bugs found by rchk have been fixed.

0.100.19
  - Fix some bugs detected by valgrind
  
0.100.24
  - Fix thigmophobe3d to try to keep up with changes in 
    plotrix::thigmophobe.
  - Stop ?rgl.postscript from writing files to current directory
  
0.100.26
  - open3d() now signals an error if unnamed parameters are used
  - toggleWidget() now makes it easier to initialize the scene with
    some objects hidden.
  - added clipMesh3d() to allow smooth clipping of mesh objects
  - Made plot3d.lm() method handle a larger variety of models, by
    allowing for curved surfaces.
  - Fixed the startup code so that systems that don't provide
    uname still work.  (Suggestion of Settra Khemri.)
  - Added as.mesh3d.default() method to convert triangles or quads
    to a mesh3d object.
  - Added as.triangles3d() generic with methods to convert mesh3d
    objects into matrices representing triangles.
  - Added as.triangles3d.rglId() and as.mesh3d.rglId() methods to
    convert displayed objects to usable data.
    