@@ -988,4 +988,7 @@ base graphics.
     objects into matrices representing triangles.
   - Added as.triangles3d.rglId() and as.mesh3d.rglId() methods to
     convert displayed objects to usable data.
+  - Added meshColor as an argument to tmesh3d(), qmesh3d()
+    and dot3d(); changed default to no longer give warning if
+    meshColor is not specified.
     
